--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,16 +188,22 @@
     #slider {
         width: 100%;
         height: 500px;
+        position: relative;
     }
 
-    #slide1{
+
+    .slide-div {
         width: 100%;
         height: 500px;
-        background-image: url(/assets/img/image1.jpg);
         background-size: cover;
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-position: top center;
+        background-image: url(/assets/img/image1.jpg);
+    }
+
+    #slide1{        
+        background-image: url(/assets/img/image1.jpg);
     }
 
     #slider .tela {
@@ -215,6 +221,277 @@
         padding:1rem;
         margin: 1rem;
     }
+
+    @keyframes tonext {
+        75% {
+          left: 0;
+        }
+        95% {
+          left: 100%;
+        }
+        98% {
+          left: 100%;
+        }
+        99% {
+          left: 0;
+        }
+      }
+      
+      @keyframes tostart {
+        75% {
+          left: 0;
+        }
+        95% {
+          left: -300%;
+        }
+        98% {
+          left: -300%;
+        }
+        99% {
+          left: 0;
+        }
+      }
+      
+      @keyframes snap {
+        96% {
+          scroll-snap-align: center;
+        }
+        97% {
+          scroll-snap-align: none;
+        }
+        99% {
+          scroll-snap-align: none;
+        }
+        100% {
+          scroll-snap-align: center;
+        }
+        
+      }
+
+      @keyframes aparecer {
+        0% {
+            background: rgba(255,255,255,0);
+        }
+
+        25% {
+            background: rgba(255,255,255,0.25);
+        }
+
+        50% {
+            background: rgba(255,255,255,0.50);
+        }
+
+        75% {
+            background: rgba(255,255,255,0.75);
+        }
+
+        100% {
+            background: rgba(255,255,255,1);
+        }
+      }
+      
+      @keyframes desaparecer {
+        0% {
+            background: rgba(255,255,255,1);
+        }
+
+        25% {
+            background: rgba(255,255,255,0.75);
+        }
+
+        50% {
+            background: rgba(255,255,255,0.50);
+        }
+
+        75% {
+            background: rgba(255,255,255,0.25);
+        }
+
+        100% {
+            background: rgba(255,255,255,0);
+        }
+      }
+             
+      #slider ol, #slider li {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+      
+      #slider .carousel {
+        position: relative;
+        padding-top: 75%;
+        filter: drop-shadow(0 0 10px #0003);
+        perspective: 100px;
+      }
+      
+      #slider .carousel__viewport {
+        width: 100%;
+        height: 500px;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        /* overflow-x: scroll; */
+        overflow: hidden;
+        counter-reset: item;
+        scroll-behavior: smooth;
+        scroll-snap-type: x mandatory;
+      }
+      
+      #slider .carousel__slide {
+        position: relative;
+        flex: 0 0 100%;
+        width: 100%;
+        background-color: #f99;
+        counter-increment: item;
+      }
+      
+      #slider .carousel__slide:nth-child(even) {
+        background-color: #99f;
+      }
+      
+      #slider .carousel__slide:before {
+        /* content: counter(item); */
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate3d(-50%,-40%,70px);
+        color: #fff;
+        font-size: 2em;
+      }
+      
+      #slider .carousel__snapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        scroll-snap-align: center;
+      }
+      
+      @media (hover: hover) {
+        #slider .carousel__snapper {
+          animation-name: tonext, snap;
+          animation-timing-function: ease;
+          animation-duration: 8s;
+          animation-iteration-count: infinite;
+        }
+
+        #slider .carousel__slide:last-child .carousel__snapper {
+          animation-name: tostart, snap;
+        }
+      }
+
+      @media (prefers-reduced-motion: reduce) {
+        #slider .carousel__snapper {
+          animation-name: none;
+        }
+      }
+      
+      #slider .carousel:hover #slider .carousel__snapper,
+      #slider .carousel:focus-within #slider .carousel__snapper {
+        animation-name: none;
+      }
+      
+      #slider .carousel__navigation {
+        position: absolute;
+        right: 0;
+        bottom: 10px;
+        left: 0;
+        width: 100%;
+        text-align: center;
+      }
+      
+      #slider .carousel__navigation-list-prevDiv {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+      }
+
+     #slider .carousel__navigation-item {
+        display: flex;
+      }
+
+      #slider .carousel__navigation-list {
+        display: flex;
+        background: rgba(255,255,255,0);
+        padding: 0.3rem 0.5rem;
+        opacity: 0.3;
+        border-radius: 10px;
+        animation-name: desaparecer;
+        animation-duration: 1s; 
+        transition: all 1s ease 0s;
+      }
+
+      #slider .carousel__navigation-list:hover {
+          opacity: 1;
+          animation-name: aparecer;
+          animation-duration: 1s;          
+      }
+      
+      #slider .carousel__navigation-button {
+        display: inline-block;
+        width: 1.5rem;
+        height: 1.5rem;
+        background-color: #333;
+        background-clip: content-box;
+        border: 0.25rem solid transparent;
+        border-radius: 50%;
+        font-size: 0;
+        transition: transform 0.1s;
+      }
+      
+      #slider .carousel::before,
+      #slider .carousel::after,
+      #slider .carousel__prev,
+      #slider .carousel__next {
+        position: absolute;
+        top: 0;
+        margin-top: 37.5%;
+        width: 4rem;
+        height: 4rem;
+        transform: translateY(-50%);
+        border-radius: 50%;
+        font-size: 0;
+        outline: 0;
+      }
+      
+      #slider .carousel::before,
+      #slider .carousel__prev {
+        left: -1rem;
+      }
+      
+      #slider .carousel::after,
+      #slider .carousel__next {
+        right: -1rem;
+      }
+      
+      #slider .carousel::before,
+      #slider .carousel::after {
+        content: '';
+        z-index: 1;
+        background-color: #333;
+        background-size: 1.5rem 1.5rem;
+        background-repeat: no-repeat;
+        background-position: center center;
+        color: #fff;
+        font-size: 2.5rem;
+        line-height: 4rem;
+        text-align: center;
+        pointer-events: none;
+      }
+      
+      #slider .carousel::before {
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
+      }
+      
+      #slider .carousel::after {
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
+      }
 
 /* Instagram */
     #instagram{
