--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
         margin: 0;
         font-family: 'Fredoka', sans-serif;
         min-width: 300px;
+        overflow-x: hidden;
     }
 
     main {
@@ -25,6 +26,7 @@
         "header"
         "main"
         "footer";
+        padding: 0;
     }
 
     .paginas {
@@ -101,21 +103,11 @@
 
 /* Header */
     header{
-        grid-area: header;
         text-align: center;
-        box-shadow: 0 0 20px -2px #5A7E70;
-        display: grid;        
-    }
-    header .main-header {
-        padding: 1rem 1rem 0;
-        display: grid;
-        grid-template-areas: 
-        "logo"
-        "descripcion"
-        "principal-nav";
-    }
-    header img {
-        max-width: 9rem;
+    }   
+
+    header .row {
+        --bs-gutter-x: 0;
     }
 
     header .logo {
@@ -127,6 +119,14 @@
         grid-area: logo;
     }
 
+    header .logo-img {
+        max-width: 150px;
+    }
+
+    header .logo-img img {
+        border: 0;
+    }
+
     header .logo .logo-header h1{
         margin-bottom: 0;
     }
@@ -136,56 +136,40 @@
         margin-bottom:0.5rem;
     }
 
-    header .main-header .logo .hamb-menu {
-        display: none;
-    }
-
 /* Nav */
-    nav{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0px 1px #ccc;
-    }
-
-    nav.principal-nav{
+    .principal-nav{
         grid-area: principal-nav;
-    }
-
-    nav ul {
         padding: 0;
-        margin: 0;
-
     }
 
-    nav ul li {
-        list-style: none;
-        display: inline-block;
-        padding: 0.5rem 0rem;
+
+
+    .navbar>.container-fluid {
+        padding:0;
     }
 
-    nav ul li a {
-        text-decoration: none;
-        padding: 0.5rem 1rem;
+    .principal-nav .navbar-nav .nav-link {
+        color: black;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
 
-    nav ul li a:link {
+    .principal-nav .navbar-nav li a:link {
         color: black;
     }
 
-    nav ul li a:active, nav ul li a:focus, nav ul li a.active-link {
+    .principal-nav .navbar-nav li a:active, .principal-nav .navbar-nav li a:focus, .principal-nav .navbar-nav .nav-link.active {
         background-color: #6BA4B0;
         color:white;
     }
 
-    nav ul li a:hover {
+    .principal-nav .navbar-nav .nav-link:hover {
         background-color: #5A7E70;
         color:white;
     }
 
 /* Slider */
-    #slider {
+    .slider_apa {
         width: 100%;
         height: 500px;
         position: relative;
@@ -199,14 +183,14 @@
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-position: top center;
-        background-image: url(/assets/img/image1.jpg);
+        background-color: #6BA4B0;
     }
 
     #slide1{        
         background-image: url(/assets/img/image1.jpg);
     }
 
-    #slider .tela {
+    .slider_apa .tela {
         background-color: rgba(0,0,0,0.5);
         height: 500px;
         color: white;
@@ -217,282 +201,18 @@
         padding: 0 2rem;
         text-align: center;
     }
-    #slider .tela .tela-margen {
+    .slider_apa .tela .tela-margen {
         padding:1rem;
         margin: 1rem;
+    } 
+    .slider_apa .tela .carousel-caption {
+        position: unset;
     }
 
-    @keyframes tonext {
-        75% {
-          left: 0;
-        }
-        95% {
-          left: 100%;
-        }
-        98% {
-          left: 100%;
-        }
-        99% {
-          left: 0;
-        }
-      }
-      
-      @keyframes tostart {
-        75% {
-          left: 0;
-        }
-        95% {
-          left: -300%;
-        }
-        98% {
-          left: -300%;
-        }
-        99% {
-          left: 0;
-        }
-      }
-      
-      @keyframes snap {
-        96% {
-          scroll-snap-align: center;
-        }
-        97% {
-          scroll-snap-align: none;
-        }
-        99% {
-          scroll-snap-align: none;
-        }
-        100% {
-          scroll-snap-align: center;
-        }
-        
-      }
-
-      @keyframes aparecer {
-        0% {
-            background: rgba(255,255,255,0);
-        }
-
-        25% {
-            background: rgba(255,255,255,0.25);
-        }
-
-        50% {
-            background: rgba(255,255,255,0.50);
-        }
-
-        75% {
-            background: rgba(255,255,255,0.75);
-        }
-
-        100% {
-            background: rgba(255,255,255,1);
-        }
-      }
-      
-      @keyframes desaparecer {
-        0% {
-            background: rgba(255,255,255,1);
-        }
-
-        25% {
-            background: rgba(255,255,255,0.75);
-        }
-
-        50% {
-            background: rgba(255,255,255,0.50);
-        }
-
-        75% {
-            background: rgba(255,255,255,0.25);
-        }
-
-        100% {
-            background: rgba(255,255,255,0);
-        }
-      }
-             
-      #slider ol, #slider li {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-      
-      #slider .carousel {
-        position: relative;
-        padding-top: 75%;
-        filter: drop-shadow(0 0 10px #0003);
-        perspective: 100px;
-      }
-      
-      #slider .carousel__viewport {
-        width: 100%;
-        height: 500px;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        display: flex;
-        /* overflow-x: scroll; */
-        overflow: hidden;
-        counter-reset: item;
-        scroll-behavior: smooth;
-        scroll-snap-type: x mandatory;
-      }
-      
-      #slider .carousel__slide {
-        position: relative;
-        flex: 0 0 100%;
-        width: 100%;
-        background-color: #f99;
-        counter-increment: item;
-      }
-      
-      #slider .carousel__slide:nth-child(even) {
-        background-color: #99f;
-      }
-      
-      #slider .carousel__slide:before {
-        /* content: counter(item); */
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate3d(-50%,-40%,70px);
-        color: #fff;
-        font-size: 2em;
-      }
-      
-      #slider .carousel__snapper {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        scroll-snap-align: center;
-      }
-      
-      @media (hover: hover) {
-        #slider .carousel__snapper {
-          animation-name: tonext, snap;
-          animation-timing-function: ease;
-          animation-duration: 8s;
-          animation-iteration-count: infinite;
-        }
-
-        #slider .carousel__slide:last-child .carousel__snapper {
-          animation-name: tostart, snap;
-        }
-      }
-
-      @media (prefers-reduced-motion: reduce) {
-        #slider .carousel__snapper {
-          animation-name: none;
-        }
-      }
-      
-      #slider .carousel:hover #slider .carousel__snapper,
-      #slider .carousel:focus-within #slider .carousel__snapper {
-        animation-name: none;
-      }
-      
-      #slider .carousel__navigation {
-        position: absolute;
-        right: 0;
-        bottom: 10px;
-        left: 0;
-        width: 100%;
-        text-align: center;
-      }
-      
-      #slider .carousel__navigation-list-prevDiv {
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-      }
-
-     #slider .carousel__navigation-item {
-        display: flex;
-      }
-
-      #slider .carousel__navigation-list {
-        display: flex;
-        background: rgba(255,255,255,0);
-        padding: 0.3rem 0.5rem;
-        opacity: 0.3;
-        border-radius: 10px;
-        animation-name: desaparecer;
-        animation-duration: 1s; 
-        transition: all 1s ease 0s;
-      }
-
-      #slider .carousel__navigation-list:hover {
-          opacity: 1;
-          animation-name: aparecer;
-          animation-duration: 1s;          
-      }
-      
-      #slider .carousel__navigation-button {
-        display: inline-block;
-        width: 1.5rem;
-        height: 1.5rem;
-        background-color: #333;
-        background-clip: content-box;
-        border: 0.25rem solid transparent;
-        border-radius: 50%;
-        font-size: 0;
-        transition: transform 0.1s;
-      }
-      
-      #slider .carousel::before,
-      #slider .carousel::after,
-      #slider .carousel__prev,
-      #slider .carousel__next {
-        position: absolute;
-        top: 0;
-        margin-top: 37.5%;
-        width: 4rem;
-        height: 4rem;
-        transform: translateY(-50%);
-        border-radius: 50%;
-        font-size: 0;
-        outline: 0;
-      }
-      
-      #slider .carousel::before,
-      #slider .carousel__prev {
-        left: -1rem;
-      }
-      
-      #slider .carousel::after,
-      #slider .carousel__next {
-        right: -1rem;
-      }
-      
-      #slider .carousel::before,
-      #slider .carousel::after {
-        content: '';
-        z-index: 1;
-        background-color: #333;
-        background-size: 1.5rem 1.5rem;
-        background-repeat: no-repeat;
-        background-position: center center;
-        color: #fff;
-        font-size: 2.5rem;
-        line-height: 4rem;
-        text-align: center;
-        pointer-events: none;
-      }
-      
-      #slider .carousel::before {
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
-      }
-      
-      #slider .carousel::after {
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
-      }
-
+    .slider_apa .tela .carousel-caption h2 {
+        padding-bottom: 2rem;
+    }
+ 
 /* Instagram */
     #instagram{
         width: 100%;
@@ -508,10 +228,6 @@
         background-color: rgba(0,0,0,0.7);
         min-height: 500px;
         color: white;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
         padding: 2rem;
     }
     #instagram .tela .tela-margen {
@@ -520,31 +236,34 @@
     }
 
     #instagram .tela .instagram_img img{
-        width: 250px;
+        max-width: 250px;
         height: auto;
     }
     #instagram .tela #instagram_info {
         width: 250px;
         height: auto;
-        padding: 0.5rem;
+        padding: 0.5rem;        
+        margin: 0.5rem;
+        background: transparent;
         display: flex;
-        flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin: 0.5rem;
     }
 
     #instagram .tela .instagram_img {
+        max-width: 250px;
         padding: 0.5rem;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-items: center;
-        align-content: center;
-        justify-content: center;
         background: black;
         margin: 0.5rem;
+        display: flex;
+        justify-content: center;
     }
+
+    #instagram .tela .row {
+        justify-content: center;
+    }
+
+
 /* Siderbar */
 
 /* Footer */
@@ -557,24 +276,9 @@
 
     }
 
-    footer .footer {
-        min-height: 200px;
-    }
-
-    footer .footer-section-1 {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        align-items: center;
-        align-content: center;
-        padding: 2rem 1rem;
-    }
-
     footer .atribucion {
         background-color: goldenrod;
         color:black;
-        text-align: center;
         padding: 0.5rem 0;
     }
 
@@ -582,7 +286,7 @@
         grid-area: footer_logo;
     }
 
-    footer .footer_logo, footer .footer_logo img, footer .footer_rrss, footer .footer_contacto {
+    footer .footer_logo img {
         max-width: 300px;
     }
 
@@ -590,14 +294,8 @@
         padding: 1rem;
     }
 
-    footer .footer_rrss, footer .footer_contacto {
-        min-width: 300px;
-        text-align: center;
+    footer .footer_logo, footer .footer_rrss, footer .footer_contacto {
         padding: 2rem 0;
-    }
-
-    footer .footer_rrss h3 {
-        text-align: center;
     }
     
     footer .footer_rrss span {
@@ -617,6 +315,13 @@
         color: #597D6F;
     }
 
+    footer .footer_contacto .row {
+        padding-bottom: 1rem;
+    }
+    footer .footer_contacto .row h3{
+        margin-bottom: 0;
+    }
+
     footer .footer_contacto a {
         color:white;
         text-decoration: none;
@@ -628,6 +333,10 @@
 
     footer .footer-section-1 .footer_contacto h3 {
         margin-bottom: 0;
+    }
+
+    footer .container .row {
+        align-items: center;
     }
 
 
@@ -687,21 +396,15 @@
     grid-template-columns: 90%;
 }
 
-.tabla_cat h3 {
-    text-align: center;
-}
-
 .tabla_overflow {
     overflow: auto;
     max-height: 500px;    
 }
+
 .tabla_tallas {
-    width: 100%;
-    border-width: 0.2rem;
     border-color: black;
     border-style: groove;
     margin: 0;
-    border-collapse: collapse;
 }
 
 .tabla_tallas th {
@@ -709,16 +412,8 @@
     color: white;
 }
 
-.tabla_tallas td, .tabla_tallas th {
-    border-color: black;
-    border-style: groove;
-    padding: 0.5rem;
-    text-align: center;
-}
 .undertext_table {
     font-size: 0.85rem;
-    text-align: center;
-
 }
 
 /* Encuentranos */
@@ -790,21 +485,15 @@
 
 
 /* Tienda */
-.productos {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: row;
-    min-width: 300px;
+#productos_destacados_parent #productos_destacados_child .row {
     justify-content: center;
 }
 
 .producto{
     margin: 7px 10px;
-    position: relative;
     opacity: 0.8;
     transition: all 0.5s ease 0s;
-
+    border:0;
 }
 
 .producto:hover {
@@ -817,10 +506,13 @@
 }
 
 .producto .producto_info{
-    text-align: center;
     padding-bottom: 1rem;
+    padding-top: 0;
     opacity: 0;
     height: 0;
+}
+.producto .producto_info .card-title {
+    margin-bottom: 0;
 }
 
 .producto:hover > .producto_info {
@@ -887,33 +579,37 @@
     
 }
 
-.side-menu {
-    display: none;
-} /* Hide checkbox */
-
-/* Toggle menu icon */                    
-
-    .side-menu:checked ~ .principal-nav{
-        max-height: 100%;
-        left: 0;
-    } 
-
-    .side-menu:checked ~ .hamb .hamb-line {
-        background: transparent;
-    }
-    .side-menu:checked ~ .hamb .hamb-line::before {
-        transform: rotate(-45deg);
-        top:0;
-    }
-    .side-menu:checked ~ .hamb .hamb-line::after {
-        transform: rotate(45deg);
-        top:0;
+@media screen and (max-width:990px) {
+    .principal-nav {
+        
     }
 
-    
+    .menu-fixed {
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 10;
+        width: 100%;
+        
+    }
+    .navbar>.container-fluid {
+        justify-content: flex-end;
+    }
+
+    .principal-nav .navbar-toggler {
+        margin:10px 10px 0 0;
+        border: 0;
+        background: white;
+    }
+
+    .principal-nav .navbar-nav {
+        background: white;
+    }
+}
+
+@media screen and (max-width:768px) {
 
 
-@media screen and (max-width:700px) {
     header .main-header {
         padding: 1rem 1rem 0;
         display: grid;
@@ -964,75 +660,5 @@
     .paginas .main-section-group section h2, #productos_destacados_child h2{
         text-align: center;
     }
-
-    header .main-header .hamb-menu {
-        display: block;
-        position: fixed;
-        background: rgba(255,255,255,0.8);
-        top: 0;
-        right: 0;
-    }   
-
-    /* Menu Icon Hamb */
-        .hamb{
-            display: block;
-            cursor: pointer;
-            float: right;
-            padding: 26px 15px;
-        }/* Style label tag */
-
-        .hamb-line {
-            background: black;
-            display: block;
-            height: 2px;
-            position: relative;
-            width: 24px;
-
-        } /* Style span tag */
-
-        .hamb-line::before,
-        .hamb-line::after{
-            background: black;
-            content: '';
-            display: block;
-            height: 100%;
-            position: absolute;
-            transition: all .2s ease-out;
-            width: 100%;
-        }
-        .hamb-line::before{
-            top: 5px;
-        }
-        .hamb-line::after{
-            top: -5px;
-        }
-        .principal-nav {
-            display: block;
-            position: fixed;
-            background: white;
-            top: 0;
-            left: -80%;
-            height: 100%;
-            z-index: 999;
-            width: 80%;   
-            overflow: hidden;            
-            transition: all .2s ease-out;
-        }  
-
-        .navbar {
-            width: 100%;
-            padding: 2rem 0;
-        }
-
-        nav ul {
-            padding: 0;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            align-items: flex-start;
-        }
-
-
           
 }
