--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,6 @@
 
     .paginas {
         padding: 2rem;
-        display: flex;
         justify-content: center;
     }
 
@@ -41,7 +40,7 @@
     }
 
     .main-section-group {
-        padding: 2rem;
+        padding: 2rem 0;
         display: grid;
         grid-template-columns: auto 300px;
         column-gap: 20px;
@@ -53,7 +52,7 @@
     }
 
     aside {
-        width: 300px;
+        max-width: 300px;
     }
     
     section {
@@ -62,17 +61,11 @@
 
     .main-section-group section {
         max-width: 1140px;
-        min-width: 300px;
     }
 
     .paginas .main-section-group section {
         max-width: 820px;
         padding-bottom: 2rem;
-    }
-
-    .paginas .main-section-group aside article{
-        display: flex;
-        flex-direction: column;
     }
 
     #productos_destacados_parent {
@@ -97,6 +90,13 @@
         text-decoration: none;
     }
 
+    .row {
+        --bs-gutter-x: 0;
+    }
+
+    .shadow-bottom {
+        box-shadow: 0px 15px 10px -15px #6BA4B0;    
+    }
 /* Header */
     header{
         text-align: center;
@@ -137,8 +137,6 @@
         grid-area: principal-nav;
         padding: 0;
     }
-
-
 
     .navbar>.container-fluid {
         padding:0;
@@ -187,6 +185,7 @@
     #slide1{        
         background-image: url(/assets/img/image1.jpg);
     }
+
     #slide2{        
         background-image: url(/assets/img/apapacho-46.png);
     }
@@ -241,7 +240,7 @@
         height: auto;
     }
     #instagram .tela #instagram_info {
-        width: 250px;
+        max-width: 250px;
         height: auto;
         padding: 0.5rem;        
         margin: 0.5rem;
@@ -256,7 +255,6 @@
         padding: 0.5rem;
         background: black;
         margin: 0.5rem;
-        display: flex;
         justify-content: center;
     }
 
@@ -264,8 +262,6 @@
         justify-content: center;
     }
 
-
-/* Siderbar */
 
 /* Footer */
     footer{
@@ -342,7 +338,6 @@
 
 
 /*Contact Form */
-
     
     .info_contacto {
         padding: 0.5rem 0;
@@ -350,43 +345,6 @@
 
     .info_contacto iframe {
         border-radius: 5px;
-    }
-
-    #contact-form {
-        max-width: 820px;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        flex-direction: row;
-        padding: 2rem;
-    }
-
-    .contact-form-input{
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 1.3rem;
-        width: 100%;
-    }
-
-    .contact-form-input label {
-        font-weight: bold;
-    }
-
-    .contact-form-input input, .contact-form-input textarea {
-        padding: 1rem;
-    }
-
-    #contact-form #enviar {
-        background: #46C8E3;
-        padding: 1rem 2rem;
-        color: white;
-        max-width: 10rem;
-        border-color: #6BA4B0;
-    }
-
-    #contact-form #contact-form-submit{
-        display: flex;
-        align-items: flex-end;
     }
 
 /* Tallas */
@@ -422,23 +380,19 @@
     padding: 0 2rem;
 }
 .empresas {
-    display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: flex-start;
-    flex-wrap: wrap;
     padding-bottom: 2rem;
 }
 .empresa {
     padding: 1rem 0;
     background: #B06B88;
-    display: inline-flex;
-    flex-direction: column;
     align-items: center;
     color: white;
     border-radius: 10px;
     margin-bottom: 1rem;
-
+    max-width: 300px;
 }
 
 .empresa_mapa, .empresa_info {
@@ -528,8 +482,6 @@
 }
 
 .producto .producto_info .producto_info_precioCompra {
-    display: flex;
-    flex-direction: column;
     align-content: center;
     align-items: center;
 }
@@ -583,11 +535,11 @@
 
     .menu-fixed {
         position: fixed;
-        left: 5%;
+        left: 1%;
         top: 0.5rem;
-        right: 5%;
+        right: 1%;
         z-index: 10;
-        width: 90%;
+        width: 98%;
         
     }
     .navbar>.container-fluid {
@@ -615,7 +567,7 @@
     footer .atribucion {
         --bs-gutter-x: 0;
         justify-content: center;
-
+        text-align: center;
     }
 
     header .main-header {
@@ -631,10 +583,6 @@
         column-gap: 0px;
         padding: 0px;
 
-    }
-
-    .main-section-group aside {
-        display: none;
     }
 
     footer .footer_logo, footer .footer_logo img, footer .footer_rrss, footer .footer_contacto {
@@ -669,4 +617,10 @@
         text-align: center;
     }
           
+}
+
+@media screen and (max-width:420px) {
+    header .logo {
+        flex-direction: column;
+    }
 }
