--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,56 +30,24 @@
     }
 
     .paginas {
-        padding: 2rem;
-        justify-content: center;
-    }
-
-    .main-section {
         padding: 2rem 0rem;
-        max-width: 1140px;
     }
 
-    .main-section-group {
-        padding: 2rem 0;
-        display: grid;
-        grid-template-columns: auto 300px;
-        column-gap: 20px;
-        
+    .paginas>.row, footer>.row {
+        --bs-gutter-x: 0;
     }
 
     .texto_pagina {
         padding-bottom: 2rem;
     }
 
-    aside {
-        max-width: 300px;
-    }
-    
     section {
         max-width: 100%;
     }    
 
-    .main-section-group section {
-        max-width: 1140px;
-    }
 
-    .paginas .main-section-group section {
-        max-width: 820px;
-        padding-bottom: 2rem;
-    }
-
-    #productos_destacados_parent {
-        clear: both;
-        width: 100%;
-        display: flex;
-        padding: 2rem 0;
-        justify-content: center;
-    }
-
-    #productos_destacados_child {
-        min-width: 300px;
-        max-width: 1140px;
-        padding: 2rem;
+    .padding-right {
+        padding-right: 1.5rem;
     }
 
     .boton {
@@ -90,12 +58,13 @@
         text-decoration: none;
     }
 
-    .row {
-        --bs-gutter-x: 0;
-    }
-
     .shadow-bottom {
         box-shadow: 0px 15px 10px -15px #6BA4B0;    
+    }
+
+    .aside-flex {
+        display: flex;
+        flex-direction: column;
     }
 /* Header */
     header{
@@ -376,9 +345,6 @@
 }
 
 /* Encuentranos */
-#encuentranos {
-    padding: 0 2rem;
-}
 .empresas {
     flex-direction: row;
     justify-content: space-evenly;
@@ -439,8 +405,8 @@
 
 
 /* Tienda */
-#productos_destacados_parent #productos_destacados_child .row {
-    justify-content: center;
+#productos_destacados {
+    padding: 2rem;
 }
 
 .producto{
@@ -512,7 +478,7 @@
     text-decoration: none;
 }
 
-.opcionesFiltro li {
+.aside-flex li {
    list-style: none;
 }
 
@@ -535,11 +501,10 @@
 
     .menu-fixed {
         position: fixed;
-        left: 1%;
         top: 0.5rem;
-        right: 1%;
+        right: 5%;
         z-index: 10;
-        width: 98%;
+        width: 95%;
         
     }
     .navbar>.container-fluid {
@@ -578,13 +543,6 @@
         "descripcion";
     }   
 
-    .main-section-group {
-        grid-template-columns: auto;
-        column-gap: 0px;
-        padding: 0px;
-
-    }
-
     footer .footer_logo, footer .footer_logo img, footer .footer_rrss, footer .footer_contacto {
         display: flex;
         justify-content: center;
@@ -609,18 +567,20 @@
         flex-direction: column;
     }
 
-    .paginas .main-section-group section{
-        text-align: center;
+    #filtroProductos {
+        padding: 0 2rem;
     }
 
-    .paginas .main-section-group section h2, #productos_destacados_child h2{
-        text-align: center;
+    aside {
+        margin-top: 2rem!important;
     }
-          
+       
 }
 
 @media screen and (max-width:420px) {
     header .logo {
         flex-direction: column;
     }
+
+    
 }
