preparandome para reemplazar main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
 }
+
 /* Body */
     body{
         margin: 0;
@@ -16,10 +17,15 @@
         grid-area: main;
     }
 
+    section {
+        max-width: 100%;
+    } 
+
     img {
         width: 100%;
     }
 
+    
     .homeGrid {
         display: grid;
         grid-template-areas:
@@ -41,11 +47,6 @@
         padding-bottom: 2rem;
     }
 
-    section {
-        max-width: 100%;
-    }    
-
-
     .padding-right {
         padding-right: 1.5rem;
     }
@@ -66,10 +67,11 @@
         display: flex;
         flex-direction: column;
     }
+
 /* Header */
     header{
         text-align: center;
-    }   
+    }
 
     header .row {
         --bs-gutter-x: 0;
@@ -107,7 +109,7 @@
         padding: 0;
     }
 
-    .navbar>.container-fluid {
+    .principal-nav .navbar>.container-fluid {
         padding:0;
     }
 
@@ -131,7 +133,6 @@
         color:white;
     }
 
-    
 
 /* Slider */
     .slider_apa {
@@ -149,14 +150,6 @@
         background-repeat: no-repeat;
         background-position: top center;
         background-color: #6BA4B0;
-    }
-
-    #slide1{        
-        background-image: url(/assets/img/image1.jpg);
-    }
-
-    #slide2{        
-        background-image: url(/assets/img/apapacho-46.png);
     }
 
     .slider_apa .tela {
@@ -181,6 +174,18 @@
     .slider_apa .tela .carousel-caption h2 {
         padding-bottom: 2rem;
     }
+
+    #slide1{        
+        background-image: url(/assets/img/image1.jpg);
+    }
+
+    #slide2{        
+        background-image: url(/assets/img/apapacho-46.png);
+    }
+
+    #slide3{        
+        background-image: url(/assets/img/apapacho-24.JPG);
+    }
  
 /* Instagram */
     #instagram{
@@ -199,6 +204,7 @@
         color: white;
         padding: 2rem;
     }
+
     #instagram .tela .tela-margen {
         padding:1rem;
         display: flex;
@@ -208,6 +214,7 @@
         max-width: 250px;
         height: auto;
     }
+
     #instagram .tela #instagram_info {
         max-width: 250px;
         height: auto;
@@ -284,6 +291,7 @@
     footer .footer_contacto .row {
         padding-bottom: 1rem;
     }
+
     footer .footer_contacto .row h3{
         margin-bottom: 0;
     }
@@ -306,8 +314,7 @@
     }
 
 
-/*Contact Form */
-    
+/*Contact Form */    
     .info_contacto {
         padding: 0.5rem 0;
     }
@@ -317,185 +324,184 @@
     }
 
 /* Tallas */
-.tabla_cat {
-    padding-bottom: 2rem;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 90%;
-}
+    .tabla_cat {
+        padding-bottom: 2rem;
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 90%;
+    }
 
-.tabla_overflow {
-    overflow: auto;
-    max-height: 500px;    
-}
+    .tabla_overflow {
+        overflow: auto;
+        max-height: 500px;    
+    }
 
-.tabla_tallas {
-    border-color: black;
-    border-style: groove;
-    margin: 0;
-}
+    .tabla_tallas {
+        border-color: black;
+        border-style: groove;
+        margin: 0;
+    }
 
-.tabla_tallas th {
-    background-color: #B06B88;
-    color: white;
-}
+    .tabla_tallas th {
+        background-color: #B06B88;
+        color: white;
+    }
 
-.undertext_table {
-    font-size: 0.85rem;
-}
+    .undertext_table {
+        font-size: 0.85rem;
+    }
 
 /* Encuentranos */
-.empresas {
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    padding-bottom: 2rem;
-}
-.empresa {
-    padding: 1rem 0;
-    background: #B06B88;
-    align-items: center;
-    color: white;
-    border-radius: 10px;
-    margin-bottom: 1rem;
-    max-width: 300px;
-}
+    .empresas {
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        padding-bottom: 2rem;
+    }
 
-.empresa_mapa, .empresa_info {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    width: 90%;
-}
+    .empresa {
+        padding: 1rem 0;
+        background: #B06B88;
+        align-items: center;
+        color: white;
+        border-radius: 10px;
+        margin-bottom: 1rem;
+        max-width: 300px;
+    }
 
-.empresa_mapa iframe {
-    border-radius: 5px;
-}
+    .empresa_mapa, .empresa_info {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 90%;
+    }
 
-.empresa_info{
-    font-size: 0.90rem;
-}
+    .empresa_mapa iframe {
+        border-radius: 5px;
+    }
 
-.empresa_direccion {
-    padding-bottom: 0.3rem;
-}
+    .empresa_info{
+        font-size: 0.90rem;
+    }
 
-.empresa_rrss {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    font-size: 1.3rem;
-}
+    .empresa_direccion {
+        padding-bottom: 0.3rem;
+    }
 
-.empresa_rrss span {
-    padding: 0 0.5rem;
-}
-.empresa a {
-    color: white;
-}
+    .empresa_rrss {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        font-size: 1.3rem;
+    }
 
-.empresa a:visited {
-    color: rgb(235, 235, 235);
-}
+    .empresa_rrss span {
+        padding: 0 0.5rem;
+    }
 
-.empresa a:hover {
-    color: #6BA4B0;
-}
+    .empresa a {
+        color: white;
+    }
 
+    .empresa a:visited {
+        color: rgb(235, 235, 235);
+    }
 
+    .empresa a:hover {
+        color: #6BA4B0;
+    }
 
 /* Tienda */
-#productos_destacados {
-    padding: 2rem;
-}
+    #productos_destacados {
+        padding: 2rem;
+    }
 
-.producto{
-    margin: 7px 10px;
-    opacity: 0.8;
-    transition: all 0.5s ease 0s;
-    border:0;
-}
+    .producto{
+        opacity: 0.8;
+        transition: all 0.5s ease 0s;
+        border:0;
+    }
 
-.producto:hover {
-    opacity: 1;
-    transform: scale(1.2);
-}
+    .producto:hover {
+        opacity: 1;
+        transform: scale(1.2);
+    }
 
-.producto, .producto img {
-    max-width: 250px;
-}
+    .producto, .producto img {
+        max-width: 250px;
+    }
 
-.producto .producto_info{
-    padding-bottom: 1rem;
-    padding-top: 0;
-    opacity: 0;
-    height: 0;
-}
-.producto .producto_info .card-title {
-    margin-bottom: 0;
-}
+    .producto .producto_info{
+        padding-bottom: 1rem;
+        padding-top: 0;
+        opacity: 0;
+        height: 0;
+    }
 
-.producto:hover > .producto_info {
-    display: block;
-    opacity: 1;
-    height: auto;
-    transition: all 1s ease 0s;
-}
+    .producto .producto_info .card-title {
+        margin-bottom: 0;
+    }
 
+    .producto:hover > .producto_info {
+        display: block;
+        opacity: 1;
+        height: auto;
+        transition: all 1s ease 0s;
+    }
 
-.producto .producto_info h3{
-    margin: 0;
-}
+    .producto .producto_info h3{
+        margin: 0;
+    }
 
-.producto .producto_info .producto_info_precioCompra {
-    align-content: center;
-    align-items: center;
-}
+    .producto .producto_info .producto_info_precioCompra {
+        align-content: center;
+        align-items: center;
+    }
 
-.producto .producto_comprar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;    
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
+    .producto .producto_comprar {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;    
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
 
-}
+    }
 
-.producto .producto_comprar .producto_comprar_btn {
-    background: #B06B88;
-    padding: 0.5rem 1rem;
-    margin-top: 0.5rem;
-    color:white;
-    text-decoration: none;
-}
+    .producto .producto_comprar .producto_comprar_btn {
+        background: #B06B88;
+        padding: 0.5rem 1rem;
+        margin-top: 0.5rem;
+        color:white;
+        text-decoration: none;
+    }
 
-.producto .producto_comprar:hover{
-    opacity: 1;
-    text-decoration: none;
-}
+    .producto .producto_comprar:hover{
+        opacity: 1;
+        text-decoration: none;
+    }
 
-.aside-flex li {
-   list-style: none;
-}
+    .aside-flex li {
+    list-style: none;
+    }
 
-.cuadrado {
-    display: inline-block;
-    width: 10px; 
-    height: 10px; 
-}
+    .cuadrado {
+        display: inline-block;
+        width: 10px; 
+        height: 10px; 
+    }
 
-.rangoPrecios{
-    display: grid;
-}
+    .rangoPrecios{
+        display: grid;
+    }
 
-.rangoPrecios-center {
-    display: inline-flex;
-    
-}
+    .rangoPrecios-center {
+        display: inline-flex;
+        
+    }
 
 @media screen and (max-width:990px) {
 
@@ -507,6 +513,7 @@
         width: 95%;
         
     }
+
     .navbar>.container-fluid {
         justify-content: flex-end;
     }
@@ -582,8 +589,7 @@
     .paginas article {
         width: 90%;
         margin: 0 auto;
-    }
-       
+    }       
 }
 
 @media screen and (max-width:420px) {
@@ -591,7 +597,7 @@
         flex-direction: column;
     }
 
-    h2, h3   {
+    h2, h3 {
         text-align: center;
     }    
 }
