--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,22 @@
   margin: 0;
   padding: 0; }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px; }
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; }
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; }
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; }
+
 /* Body */
 body {
   margin: 0;
@@ -49,53 +65,63 @@ img {
 
 .aside-flex {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  background-color: white;
+  z-index: 1;
+  overflow: hidden;
+  box-shadow: none;
+  padding: 0; }
   .aside-flex li {
     list-style: none; }
+  .aside-flex.collapse {
+    display: flex; }
+
+#filtroProductos .navbar-toggler {
+  display: none; }
 
 /* Header */
-header {
-  text-align: center; }
-  header .logo {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    grid-area: logo; }
-    header .logo .logo-img {
-      max-width: 150px; }
-      header .logo .logo-img img {
-        border: 0; }
-    header .logo .logo-header h1 {
-      margin-bottom: 0; }
-  header .descripcion {
-    display: block;
-    margin-bottom: 0.5rem; }
-  header .principal-nav {
-    grid-area: principal-nav;
+header .logo {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  grid-area: logo; }
+  header .logo .logo-img {
+    max-width: 150px; }
+    header .logo .logo-img img {
+      border: 0; }
+  header .logo .logo-header h1 {
+    margin-bottom: 0; }
+
+header .descripcion {
+  display: block;
+  margin-bottom: 0.5rem; }
+
+header .principal-nav {
+  grid-area: principal-nav;
+  padding: 0; }
+  header .principal-nav button.collapsed .menu_cel:before {
+    content: "\f0c9" !important; }
+  header .principal-nav button .menu_cel:before {
+    content: "\f00d"; }
+  header .principal-nav > .container-fluid {
     padding: 0; }
-    header .principal-nav button.collapsed .menu_cel:before {
-      content: "\f0c9" !important; }
-    header .principal-nav button .menu_cel:before {
-      content: "\f00d"; }
-    header .principal-nav > .container-fluid {
-      padding: 0; }
-    header .principal-nav .navbar-nav .nav-link {
-      color: black;
-      padding-left: 1rem;
-      padding-right: 1rem; }
-      header .principal-nav .navbar-nav .nav-link:hover {
-        background-color: #5A7E70;
-        color: white; }
-      header .principal-nav .navbar-nav .nav-link.active {
-        background-color: #6BA4B0;
-        color: white; }
-    header .principal-nav .navbar-nav li a:link {
-      color: black; }
-    header .principal-nav .navbar-nav li a:active, header .principal-nav .navbar-nav li a:focus {
+  header .principal-nav .navbar-nav .nav-link {
+    color: black;
+    padding-left: 1rem;
+    padding-right: 1rem; }
+    header .principal-nav .navbar-nav .nav-link:hover {
+      background-color: #5A7E70;
+      color: white; }
+    header .principal-nav .navbar-nav .nav-link.active {
       background-color: #6BA4B0;
       color: white; }
+  header .principal-nav .navbar-nav li a:link {
+    color: black; }
+  header .principal-nav .navbar-nav li a:active, header .principal-nav .navbar-nav li a:focus {
+    background-color: #6BA4B0;
+    color: white; }
 
 /* Slider */
 .slider_apa {
@@ -384,10 +410,33 @@ footer {
     --bs-gutter-x: 0;
     justify-content: center;
     text-align: center; }
+  .tienda {
+    position: relative;
+    max-width: 90%; }
   aside {
     margin-top: 2rem !important; }
     aside#filtroProductos {
-      padding: 0 2rem; }
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 95%;
+      max-width: 300px; }
+      aside#filtroProductos .navbar-toggler {
+        display: block; }
+      aside#filtroProductos .aside-flex {
+        background-color: white;
+        z-index: 9;
+        overflow: hidden;
+        box-shadow: rgba(0, 0, 0, 0.5) 5px 5px 10px 1px;
+        padding: 1rem; }
+        aside#filtroProductos .aside-flex.collapse {
+          display: none;
+          height: 0px; }
+        aside#filtroProductos .aside-flex.collapse.show {
+          display: block;
+          height: 300px; }
+          aside#filtroProductos .aside-flex.collapse.show:hover {
+            overflow-y: scroll; }
   .paginas article {
     width: 90%;
     margin: 0 auto; } }
